@@ -32,6 +32,7 @@ public:
 
 private:
 
+  Int_t fPileUpDistribution;
   Double_t fMeanPileUp;
   Double_t fZVertexSpread;
 
