@@ -1,4 +1,5 @@
 3.0.10:
+  added PileUpDistribution parameter to the PileUpMerger module
   added UsePTSum and PTSumMax parameters to the Isolation module
   added posibility to read reweighting information from LHEF
   updated ATLAS and CMS example cards
